[add] _sass, assets

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,6 +7,9 @@ permalink: /about
 ---
 
 <div>
+  <div class="img-box">
+    <img src="../assets/img/test.jpg" width="300" height="200">
+  </div>
   <h3>{% t about.title %}</h3>
   <p>{% t about.detail %}</p>
 </div>
