--- a/_pages/404.html
+++ b/_pages/404.html
@@ -18,8 +18,10 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <!-- <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>The requested page could not be found.</p> -->
+  <h2>何かしらの不具合があったようです。</h2>
+  <p>原因は判明していません。<a href="{% tl / %}">メイン画面に戻る</a></p>
 </div>
