--- a/_pages/product.html
+++ b/_pages/product.html
@@ -7,6 +7,11 @@ permalink: /product
 ---
 
 <div>
+  {% if site.lang == "ja" %}
+    <img src="../assets/img/ja/water.jpg" width="300" height="200">
+  {% elsif site.lang == "en" %}
+    <img src="../assets/img/en/water.jpg" width="300" height="200">
+  {% endif %}
   <h3>{% t product.title %}</h3>
   <p>{% t product.detail %}</p>
 </div>
